# SETS

./: .config.json  .dockerignore  .flake8  .gitignore  INSTALLATION.md  README.md  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  snapshot.py
.github/workflows/: build-for-pypi.yml  build.yml
distribution/: README.md  SETS.iss  build_pyinstaller.sh  sets.desktop
distribution/arch/: PKGBUILD  README.md
distribution/debian/: README.md  build_deb.Dockerfile  build_deb.compose.yaml  changelog  copyright  deb_build_base.Dockerfile  package_deb.sh
distribution/debian/DEBIAN/: control
distribution/windows/: README.md
local/: Appicon.icns  aliases.json  ground_skills(new).json  ground_skills.json  ground_skills_old.json  skills.json  space_skills.json  version.txt
logs/: snapshot.py  snapshot.txt
src/: __init__.py  app.py  buildhelpers.py  buildloader.py  buildmanager.py  buildupdater.py  callbacks.py  cargomanager.py  config.py  constants.py  contextmenu.py  datafunctions.py  dialogs.py  downloader.py  export.py  exportwindow.py  imagemanager.py  iofunc.py  logger.py  picker.py  splash.py  style.py  subwindows.py  syncmanager.py  textedit.py  theme.py  widgetbuilder.py  widgets.py
src/PreApp/: __init__.py  snapshot.py  snapshot.txt
