[project]
name = "SETS"
version = "2.0"
description = "A Star Trek Online build tool in Python"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Games/Entertainment",
    "Development Status :: 4 - Beta"
]
dependencies = [
  "PySide6",
  "requests",
  "numpy",
  "requests_html",
  "lxml_html_clean"
]

[project.urls]
homepage = "https://stobuilds.com/apps/sets"
repository = "https://github.com/STOCD/SETS"
