[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SETS"
description = "A Star Trek Online build tool in Python"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Games/Entertainment",
    "Development Status :: 4 - Beta"
]
dependencies = [
  "PySide6",
  "requests",
  "numpy",
  "requests_html",
  "lxml_html_clean"
]
dynamic = ["version"]

[project.urls]
homepage = "https://stobuilds.com/apps/sets"
repository = "https://github.com/STOCD/SETS"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
sets = "main:Launcher.launch"

[tool.hatch.version]
path = "main.py"
pattern = "\\s*version = '(?P<version>.*)'"

[tool.cxfreeze]
executables = [
    { script = "main.py", base = "gui", icon = "local/icon", target_name = "SETS" }
]

[tool.cxfreeze.build_exe]
include_files = ["local", "LICENSE", "README.md"]
packages = ["PySide6", "requests", "numpy", "requests_html", "lxml_html_clean"]
optimize = 2
