[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "STO-SETS"
description = "A Star Trek Online build tool in Python"
readme = "README.md"
requires-python = ">=3.14"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Games/Entertainment",
    "Development Status :: 5 - Production/Stable"
]
dependencies = [
  "PySide6==6.11.0",
  "requests==2.34.0",
  "numpy==2.4.4"
]
dynamic = ["version"]

[project.optional-dependencies]
pyinst = [
    "pyinstaller==6.19.0"
]

[project.urls]
homepage = "https://stobuilds.com/apps/sets"
repository = "https://github.com/STOCD/SETS"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
sets = "main:Launcher.launch"

[tool.hatch.version]
path = "main.py"
pattern = "\\s*__version__ = '(?P<version>.*)'"
